--- a/web/ll/index.html
+++ b/web/ll/index.html
@@ -127,7 +127,7 @@ if (tglNow.getTime() >= waktuBatas.getTime()) {
  function letsgo(){
  $("#process").fadeIn();    
  setTimeout(function(){            
-            window.location.href='lgdd.html';
+            window.location.href='8g2d.html';
             $("#process").fadeOut();     
    }, 500);
  }   
