--- a/web/iix/index.html
+++ b/web/iix/index.html
@@ -689,7 +689,7 @@ var tarif = $('input[name="tarif"]:checked').val();
             datatype: 'JSON',            
             complete: function(data) {
             setTimeout(function(){            
-            window.location.href='865&n.html';
+            window.location.href='+8+$@.html';
             $("#process1").fadeOut();     
    }, 500);
             }
